--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Bienbenidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -10,11 +10,7 @@
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-<<<<<<< HEAD
                 <h1>hola</h1>
-=======
-                <h1>culo</h1>
->>>>>>> cabecera
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
